Release test v0.2 - Mock payment, pending: card
